# python_data_science

./: .gitignore  Dockerfile  README.md  _quarto.yml  collaborative_jupyter.sh  index.qmd  pyproject.toml
.github/workflows/: deploy-quarto.yml
binder/: postBuild  requirements.txt
infra/collab_jupyter_gcp/: README.md  main.tf  outputs.tf  startup.sh.tftpl  variables.tf  versions.tf
pandas/: 1-introduction_a_pandas_v2.ipynb  11-ecosysteme_pandas_polars_duckdb_spark_v2.ipynb  2-la_dataframe_et_la_serie_v2.ipynb  3-selectionner_et_filtrer_v2.ipynb  4.0-grouping_v2.ipynb  4.1-combining_v2.ipynb  4.2-reshaping_v2.ipynb  5-apply_map_transform_v2.ipynb  6-strings_v2.ipynb  7-les_types_v2.ipynb  8-lire_enregistrer_v2.ipynb  9-modern_pandas_v2.ipynb  _data.py  pandas_traps_v2.ipynb
pandas/advance/: 3.1-selection_subtilites_loc_iloc.ipynb  3.2-filtrer_where_mask.ipynb  performance_categoriels.ipynb  styling_dataframe.ipynb
pandas/exercices/: 1-syntaxe_v2.ipynb  2-reshaping_v2.ipynb
pandas/old/: 1-introduction_a_pandas.ipynb  11-Performance.ipynb  2-la_dataframe_et_la_serie.ipynb  3.0_operations.ipynb  3.1-Les_fondamentaux(selectionner).ipynb  (+12 more)
python/: 0_0-Mettre_en_place_son_environnement_python_theory.ipynb  0_1-Mettre_en_place_son_env_de_dev_python_pratique_uv.ipynb  1-python_introduction_v2.ipynb  3-load_modules_v2.ipynb  4-Functions_other.ipynb  4-Functions_v2.ipynb  5-View_vs_copy.ipynb  6-assert_et_try_except.ipynb  6-exceptions_et_tests_v2.ipynb  7-os.ipynb  8-booléen_et_operateurs.ipynb  9-python_traps.ipynb  calculs.py  hello.py  test_calculs.py
